Implement api for get a specific post by ID and refactor swagger docs
